--- a/index.html
+++ b/index.html
@@ -96,28 +96,44 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/our_team/ihor_demyanenko.jpg" alt="" width="270" height="260">
-              <h3>Игорь Демьяненко</h3>
-              <p lang="eng">Product Designer</p>
-            </img>
+            <img
+              src="./images/our_team/ihor_demyanenko.jpg"
+              alt=""
+              width="270"
+              height="260"
+            />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/our_team/olha_repina.jpg" alt="" width="270" height="260">
-              <h3>Ольга Репина</h3>
-              <p lang="eng">Frontend Developer</p>
-            </img>
+            <img
+              src="./images/our_team/olha_repina.jpg"
+              alt=""
+              width="270"
+              height="260"
+            />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/our_team/nikolai_tarasov.jpg" alt="" width="270" height="260">
-              <h3>Николай Тарасов</h3>
-              <p lang="eng">Marketing</p>
-            </img>
+            <img
+              src="./images/our_team/nikolai_tarasov.jpg"
+              alt=""
+              width="270"
+              height="260"
+            />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/our_team/mikhail_ermakov.jpg" alt="" width="270" height="260">
-              <h3>Михаил Ермаков</h3>
-              <p lang="eng">UI Designer</p>
-            </img>
+            <img
+              src="./images/our_team/mikhail_ermakov.jpg"
+              alt=""
+              width="270"
+              height="260"
+            />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -128,7 +144,14 @@
           <p>WebStudio</p>
         </a>
         <ul>
-          <li><a href="https://goo.gl/maps/nKiDBG7Q7srMkNem7" target="_blank" rel="noopener noreferrer"></a>г. Киев, пр-т Леси Украинки, 26</li>
+          <li>
+            <a
+              href="https://goo.gl/maps/nKiDBG7Q7srMkNem7"
+              target="_blank"
+              rel="noopener noreferrer"
+            ></a
+            >г. Киев, пр-т Леси Украинки, 26
+          </li>
           <li><a href="mailto:info@example.com"></a>info@example.com</li>
           <li><a href="tel:+380991111111"></a>+38 099 111 11 11</li>
         </ul>
